# visodo

./: .gitignore  CMakeLists.txt  results1_1.txt  test.xml
src/: visodo.cpp  vo_features.h
